DevTools: support main resource throttling with PlzNavigate

When navigating a frame that has DevTools attached, set
X-DevTools-Emulate-Network-Conditions-Client-Id in NavigationRequest
so that network conditions are applied when browser-initiated navigation
if performed.
Also, merge this logic with applying User-Agent override for brevity.

Bug: 749884
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_site_isolation
Change-Id: I26332c621b00e1c2d9a1872b95cb55d63f8d82d1
Reviewed-on: https://chromium-review.googlesource.com/600816
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Andrey Kosyakov <caseq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#492416}
Former-commit-id: 25dc5157098d393d8ed7263a8780c3f2471840ae